Expose issue attachment deletion via REST
Fixes #34425
